--- a/model_based_RL_rev_analysis.rmd
+++ b/model_based_RL_rev_analysis.rmd
@@ -334,10 +334,10 @@ choice_plot <- choice_classification %>%
   theme_allie()+
   scale_color_red_blue("Condition")+
   xlab("")+
-  ylab("number of choices (out of 50 trials)")+
+  ylab("number of choices (out of 100 trials)")+
   scale_x_discrete(labels=c("exploitation" = "exploitation", "directed_exploration" = "directed exploration",
                               "random_exploration" = "random exploration"))+
-  ggtitle("Number of Exploitation and Exploration Choices by Condition")
+  ggtitle("Number of Exploitation and Exploration\nChoices by Condition (Sample 1)")
 choice_plot
 
 # some stats
@@ -392,27 +392,65 @@ effectsize::cohens_d(n~condition, data = choice_summary %>%
   filter(choice_type == "random_exploration") %>%
   ungroup())
 ```
+
+plot the trial-by-trial model-derived expected value and estimated uncertainty for an example subject 
+
+```{r}
+# door colors: red blue purple yellow
+door_colors = c("#BD431E", "#3772C6", "#8368C7", "#F6C34C")
+
+#  example subject choice classification
+sub_num = 15 # interrogative
+
+# plot trial by trial expected value
+learn_data_choice_classification %>%
+  filter(ID_num==sub_num)%>%
+  ggplot(aes(x = learn_trial_n))+
+  geom_line(aes(y = V1), color = door_colors[1])+
+  geom_line(aes(y = V2), color = door_colors[2])+
+  geom_line(aes(y = V3), color = door_colors[3])+
+  geom_line(aes(y = V4), color = door_colors[4])+
+  theme_allie()+
+  xlab("Trial #")+
+  ylab("Expected Value")+
+  ggtitle("Model-Derived Expected Value (example interrogative participant)")+
+  ylim(0,100)
+
+# plot trial by trial estimated uncertainty
+learn_data_choice_classification %>%
+  filter(ID_num==sub_num)%>%
+  ggplot(aes(x = learn_trial_n))+
+  geom_line(aes(y = eb_1), color = door_colors[1])+
+  geom_line(aes(y = eb_2), color = door_colors[2])+
+  geom_line(aes(y = eb_3), color = door_colors[3])+
+  geom_line(aes(y = eb_4), color = door_colors[4])+
+  theme_allie()+
+  xlab("Trial #")+
+  ylab("Uncertainty")+
+  ggtitle("Uncertainty (example interrogative participant)")+
+  ylim(0,45)
+```
+
 individual level params
 
 ```{r params_extract}
 # get the point estimate (mean) for individual subject level parameters
-betas <- apply(bayes_SMEP_draws$beta, 2, mean)
-phis <- apply(bayes_SMEP_draws$phi, 2, mean)
-persevs <- apply(bayes_SMEP_draws$persev, 2, mean)
-# learning rate on each trial
-Kgains <- apply(bayes_SMEP_draws$Kgain, 2, mean)
+alphas <- apply(delta_SMEP_draws$alpha, 2, mean)
+betas <- apply(delta_SMEP_draws$beta, 2, mean)
+phis <- apply(delta_SMEP_draws$phi, 2, mean)
+persevs <- apply(delta_SMEP_draws$persev, 2, mean)
 
 # combine with learn data
 for(row in 1:nrow(learn_df)){
   learn_df$inverse_temperature[row] <- betas[learn_df$ID_num[row]]
   learn_df$directed_exploration[row] <- phis[learn_df$ID_num[row]]
   learn_df$perseveration[row] <- persevs[learn_df$ID_num[row]]
-  learn_df$learning_rate[row] <- Kgains[row]
+  learn_df$learning_rate[row] <- alphas[learn_df$ID_num[row]]
 }
 
 # prediction error on each trial is received - expected reward for the chosen door 
 for(row in 1:nrow(learn_df)){
-  learn_df$prediction_error[row] <- learn_df$reward[row] - bayes_SMEP_Q[row, learn_df$chosen_door_num[row]]
+  learn_df$prediction_error[row] <- learn_df$reward[row] - delta_SMEP_Q[row, learn_df$chosen_door_num[row]]
 }
 
 # append choice type
